--- a/app/src/main/res/drawable/text_view_login.xml
+++ b/app/src/main/res/drawable/text_view_login.xml
@@ -9,5 +9,5 @@
         android:left="3dp"
         android:right="3dp"/>
     <solid
-        android:color="#40000000" />
+        android:color="@color/colorGrey" />
 </shape>
