--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,37 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:id="@+id/drawer_layout"
-    tools:openDrawer="start"
-    android:background="@color/homepageDarkBackground">
-
+    android:background="@color/colorLiteGrey">
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:scrollbars="vertical">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/homepageDarkBackground"
             android:scrollbars="vertical">
 
-                <TextView
-                    android:id="@+id/textYourCurrentCourses"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/resume_learning"
-                    android:textColor="@color/colorWhite"
-                    android:gravity="start"
-                    android:textSize="14sp"
-                    android:typeface="sans"
-                    android:layout_marginStart="15dp"
-                    android:layout_marginTop="24dp"/>
+            <TextView
+                android:id="@+id/textYourCurrentCourses"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="15dp"
+                android:layout_marginTop="24dp"
+                android:gravity="start"
+                android:text="@string/resume_learning"
+                android:textColor="@color/colorBlack"
+                android:textSize="14sp"
+                android:typeface="sans" />
 
-                <androidx.recyclerview.widget.RecyclerView
+            <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/currentCourseListView"
                     android:scrollbars="horizontal"
                     android:layout_width="wrap_content"
@@ -40,7 +39,8 @@
                     android:layout_marginRight="5dp"
                     android:orientation="horizontal"
                     android:layout_below="@id/textYourCurrentCourses"
-                    android:layout_margin="5dp"/>
+                    android:layout_margin="5dp"
+                    android:background="@color/colorGrey"/>
 
                 <TextView
                     android:id="@+id/textRecommendedCoursesList"
@@ -49,7 +49,7 @@
                     android:gravity="start"
                     android:layout_marginStart="15dp"
                     android:text="@string/recommended_for_you"
-                    android:textColor="@color/colorWhite"
+                    android:textColor="@color/colorBlack"
                     android:textSize="14sp"
                     android:typeface="sans"
                     android:layout_below="@id/currentCourseListView"
@@ -61,7 +61,9 @@
                     android:layout_marginLeft="5dp"
                     android:layout_marginRight="5dp"
                     android:orientation="horizontal"
-                    android:layout_below="@id/textRecommendedCoursesList"/>
+                    android:scrollbars="horizontal"
+                    android:layout_below="@id/textRecommendedCoursesList"
+                    android:background="@color/colorGrey"/>
 
                 <TextView
                     android:id="@+id/textExploreCoursesList"
@@ -70,7 +72,7 @@
                     android:gravity="start"
                     android:layout_marginStart="15dp"
                     android:text="@string/explore"
-                    android:textColor="@color/colorWhite"
+                    android:textColor="@color/colorBlack"
                     android:textSize="14sp"
                     android:typeface="sans"
                     android:layout_marginTop="24dp"
@@ -83,8 +85,10 @@
                     android:layout_marginLeft="5dp"
                     android:layout_marginRight="5dp"
                     android:orientation="horizontal"
+                    android:scrollbars="horizontal"
                     android:layout_below="@id/textExploreCoursesList"
-                    android:layout_margin="5dp"/>
+                    android:layout_margin="5dp"
+                    android:background="@color/colorGrey"/>
             <!--<ImageView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -93,17 +97,17 @@
 
         </RelativeLayout>
     </ScrollView>
-
     <com.google.android.material.navigation.NavigationView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="start"
-        android:fitsSystemWindows="true"
-        app:headerLayout="@layout/header_layout"
-        app:menu="@menu/home_drawer_menu"
         android:id="@+id/nav_view"
-        android:background="@color/homepageDarkBackground"
-        app:itemTextColor="@color/colorWhite"
-        app:itemIconTint="@color/colorWhite"/>
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:background="@color/colorLiteGrey"
+        android:fitsSystemWindows="true"
+        android:gravity="start"
+        app:headerLayout="@layout/header_layout"
+        app:itemIconTint="@color/colorBlack"
+        app:itemTextColor="@color/colorBlack"
+        app:menu="@menu/home_drawer_menu"
+        android:visibility="invisible"/>
 
 </androidx.drawerlayout.widget.DrawerLayout>
