--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -101,13 +101,12 @@
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:background="@color/colorLiteGrey"
+        android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        android:gravity="start"
+        android:background="@color/colorLiteGrey"
         app:headerLayout="@layout/header_layout"
         app:itemIconTint="@color/colorBlack"
         app:itemTextColor="@color/colorBlack"
-        app:menu="@menu/home_drawer_menu"
-        android:visibility="invisible"/>
+        app:menu="@menu/home_drawer_menu"/>
 
 </androidx.drawerlayout.widget.DrawerLayout>
