fixed theme and added view course page

--- a/app/src/main/res/drawable/btn_multi_select.xml
+++ b/app/src/main/res/drawable/btn_multi_select.xml
@@ -5,7 +5,7 @@
         android:color="@color/colorYellow"
         />
     <corners
-        android:topLeftRadius="10dp"
-        android:bottomRightRadius="10dp"/>
+        android:topLeftRadius="20dp"
+        android:topRightRadius="20dp"/>
 
 </shape>
