--- a/app/src/main/res/drawable/text_view_add_course.xml
+++ b/app/src/main/res/drawable/text_view_add_course.xml
@@ -9,5 +9,5 @@
         android:left="3dp"
         android:right="3dp"/>
     <solid
-        android:color="#50ffffff" />
+        android:color="@color/colorBlue" />
 </shape>
