--- a/app/src/main/res/layout/activity_setup_3.xml
+++ b/app/src/main/res/layout/activity_setup_3.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background">
+    android:background="@drawable/alterbackground">
 
     <TextView
         android:layout_width="match_parent"
@@ -24,8 +24,8 @@
         android:layout_marginStart="72dp"
         android:layout_marginEnd="72dp"
         android:hint="@string/enter_city"
-        android:textColorHint="#CCCCCC"
-        android:textColor="@color/colorWhite"
+        android:textColorHint="@color/colorWhite"
+        android:textColor="@color/colorPrimaryDark"
         android:gravity="center"
         android:layout_centerInParent="true"
         android:background="@drawable/text_view_login"
@@ -41,8 +41,8 @@
         android:layout_marginStart="72dp"
         android:layout_marginEnd="72dp"
         android:hint="@string/enter_pincode"
-        android:textColorHint="#CCCCCC"
-        android:textColor="@color/colorWhite"
+        android:textColorHint="@color/colorWhite"
+        android:textColor="@color/colorPrimaryDark"
         android:gravity="center"
         android:layout_centerInParent="true"
         android:background="@drawable/text_view_login"
@@ -115,8 +115,8 @@
         android:layout_marginStart="72dp"
         android:layout_marginEnd="72dp"
         android:hint="@string/enter_contact_number"
-        android:textColorHint="#CCCCCC"
-        android:textColor="@color/colorWhite"
+        android:textColorHint="@color/colorWhite"
+        android:textColor="@color/colorPrimaryDark"
         android:gravity="center"
         android:layout_centerInParent="true"
         android:background="@drawable/text_view_login"
