--- a/app/src/main/res/drawable/frame_recycler_view.xml
+++ b/app/src/main/res/drawable/frame_recycler_view.xml
@@ -5,7 +5,7 @@
         android:radius="5dp"
         />
     <solid
-        android:color="@color/cardview_dark_background"
+        android:color="@color/colorBlue"
         />
 
 </shape>
