--- a/app/src/main/res/layout/about.xml
+++ b/app/src/main/res/layout/about.xml
@@ -5,14 +5,14 @@
     tools:context=".AboutActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/background_light">
+    android:background="@drawable/alterbackground">
 
     <ImageView
         android:id="@+id/logo"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
-        android:background="@drawable/ic_launcher_foreground"
+        android:background="@mipmap/ic_launcher"
         android:contentDescription="@string/app_name"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:text="@string/aboutTitleText"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:textColor="@color/colorAccent"
+        android:textColor="@color/colorWhite"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.2"
@@ -41,7 +41,7 @@
         android:layout_marginTop="47dp"
         android:layout_marginBottom="67dp"
         android:text="@string/app_name"
-        android:textColor="@color/colorPrimary"
+        android:textColor="@color/colorWhite"
         android:textSize="@android:dimen/app_icon_size"
         app:layout_constraintBottom_toTopOf="@+id/aboutTitle"
         app:layout_constraintEnd_toEndOf="parent"
@@ -65,6 +65,7 @@
             android:layout_height="wrap_content"
             android:text="@string/aboutText"
             android:textSize="24sp"
+            android:textColor="@color/colorWhite"
             android:textStyle="italic" />
 
     </ScrollView>
