--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,7 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".ui.login.LoginActivity"
-    android:background="@color/colorGrey">
+    android:background="@drawable/alterbackground">
 
 
 
@@ -23,7 +23,8 @@
         android:layout_marginTop="64dp"
         android:autofillHints="Email"
         android:hint="@string/prompt_email"
-        android:textColorHint="#80ffffff"
+        android:textColorHint="@color/colorWhite"
+        android:textColor="@color/colorPrimaryDark"
         android:inputType="textEmailAddress"
         android:selectAllOnFocus="true"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,7 +41,8 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="24dp"
         android:hint="@string/prompt_password"
-        android:textColorHint="#80ffffff"
+        android:textColorHint="@color/colorWhite"
+        android:textColor="@color/colorPrimaryDark"
         android:imeActionLabel="@string/action_sign_in_short"
         android:imeOptions="actionDone"
         android:inputType="textPassword"
