--- a/app/src/main/res/layout/activity_setup_1.xml
+++ b/app/src/main/res/layout/activity_setup_1.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/background">
+    android:background="@drawable/alterbackground">
 
     <TextView
         android:layout_width="match_parent"
@@ -49,6 +49,8 @@
         android:layout_below="@+id/searchInterests"
         android:layout_marginTop="27dp"
         android:gravity="center"
+        android:background="@drawable/btn_rounded_rect"
+        android:padding="20dp"
         android:text="Add Interest" />
 
     <ProgressBar
