--- a/app/src/main/res/layout/header_layout.xml
+++ b/app/src/main/res/layout/header_layout.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="200dp"
-    android:background="@color/colorGrey">
+    android:background="@color/colorBlue">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="150dp"
