--- a/app/src/main/res/layout/stat_card_teacher.xml
+++ b/app/src/main/res/layout/stat_card_teacher.xml
@@ -15,14 +15,14 @@
         android:layout_height="160dp"
         app:cardCornerRadius="10dp"
         app:cardElevation="12dp"
-        android:background="@color/cardview_dark_background">
+        android:background="@color/colorPrimary">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical"
             android:gravity="center"
-            android:background="@color/cardview_dark_background"
+            android:background="@color/colorPrimary"
             android:weightSum="100">
 
             <TextView
@@ -33,6 +33,7 @@
                 android:textColor="@color/colorWhite"
                 android:textSize="64sp"
                 android:typeface="sans"
+                android:textStyle="bold"
                 android:layout_weight="30"/>
 
             <TextView
@@ -42,6 +43,7 @@
                 android:gravity="center"
                 android:textColor="@color/colorWhite"
                 android:typeface="sans"
+                android:textStyle="bold"
                 android:layout_weight="70"/>
         </LinearLayout>
 
