updated view course page

--- a/app/src/main/res/layout/activity_add_course.xml
+++ b/app/src/main/res/layout/activity_add_course.xml
@@ -102,6 +102,7 @@
             </LinearLayout>
 
             <ToggleButton
+                android:id="@+id/add_course_mode"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textOff="@string/offline"
