--- a/app/src/main/res/layout/activity_view_course.xml
+++ b/app/src/main/res/layout/activity_view_course.xml
@@ -5,109 +5,146 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/colorAccent">
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="320dp"
-        android:layout_height="160dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="24dp"
-        android:backgroundTint="@color/colorPrimary"
-        app:cardCornerRadius="10dp"
-        android:id="@+id/courseCoverCard">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollbars="vertical">
 
         <RelativeLayout
+            android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:scrollbars="vertical">
 
-            <ImageView
-                android:id="@+id/imageCourseCoverCard"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:contentDescription="Course Representative Image"
-                android:scaleType="centerCrop"
-                android:src="@drawable/alterbackground" />
+            <androidx.cardview.widget.CardView
+                android:layout_width="320dp"
+                android:layout_height="160dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="24dp"
+                android:backgroundTint="@color/colorPrimary"
+                app:cardCornerRadius="10dp"
+                android:id="@+id/courseCoverCard">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/imageCourseCoverCard"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:contentDescription="Course Representative Image"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/alterbackground" />
+
+                    <TextView
+                        android:id="@+id/textCourseCoverCard"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignBottom="@id/imageCourseCoverCard"
+                        android:layout_marginStart="@dimen/activity_horizontal_margin"
+                        android:layout_margin="@dimen/text_margin"
+                        android:layout_marginBottom="@dimen/activity_vertical_margin"
+                        android:textColor="@color/colorWhite"
+                        android:textSize="24sp"
+                        android:textStyle="bold"
+                        android:typeface="sans"
+                        android:text="COURSE NAME"/>
+                </RelativeLayout>
+
+            </androidx.cardview.widget.CardView>
 
             <TextView
-                android:id="@+id/textCourseCoverCard"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignBottom="@id/imageCourseCoverCard"
-                android:layout_marginStart="@dimen/activity_horizontal_margin"
-                android:layout_margin="@dimen/text_margin"
-                android:layout_marginBottom="@dimen/activity_vertical_margin"
-                android:textColor="@color/colorWhite"
-                android:textSize="24sp"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="24dp"
                 android:textStyle="bold"
                 android:typeface="sans"
-                android:text="COURSE NAME"/>
+                android:text="COURSE NAME"
+                android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:layout_below="@id/courseCoverCard"
+                android:layout_marginStart="@dimen/activity_horizontal_margin"
+                android:layout_marginEnd="@dimen/activity_horizontal_margin"
+                android:id="@+id/textCourseName" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:maxHeight="48dp"
+                android:inputType="textMultiLine"
+                android:background="@drawable/text_view_login"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="@dimen/text_margin"
+                android:typeface="sans"
+                android:text="COURSE DESCRIPTION"
+                android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:layout_below="@id/textCourseName"
+                android:layout_marginStart="@dimen/activity_horizontal_margin"
+                android:layout_marginEnd="@dimen/activity_horizontal_margin"
+                android:id="@+id/textCourseDescription" />
+
+            <RatingBar
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/courseRatings"
+                android:layout_below="@id/textCourseDescription"
+                android:numStars="5"
+                android:rating="4"
+                android:stepSize="1"
+                android:layout_margin="@dimen/text_margin"
+                android:isIndicator="true"
+                android:progressTint="@color/colorYellow"
+                android:progressBackgroundTint="@color/colorPrimaryDark"/>
+
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:inputType="textMultiLine"
+                android:textColor="@color/colorPrimaryDark"
+                android:textSize="@dimen/text_margin"
+                android:typeface="sans"
+                android:text="-by AUTHOR SOMEONE\n60 hours\nOffline and Online\nRs. 1000/-\n\n45 Students currently enrolled."
+                android:layout_marginTop="@dimen/activity_vertical_margin"
+                android:layout_below="@id/courseRatings"
+                android:layout_marginStart="@dimen/activity_horizontal_margin"
+                android:layout_marginEnd="@dimen/activity_horizontal_margin"
+                android:id="@+id/textCourseDetails"
+                android:background="@drawable/text_view_login"/>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/listIntroductoryMaterial"
+                android:layout_below="@id/textCourseDetails"
+                android:orientation="horizontal"
+                android:visibility="invisible"
+                android:layout_margin="@dimen/activity_vertical_margin"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/listIntroductoryMaterial"
+                android:text="Reviews."
+                android:textSize="@dimen/text_margin"
+                android:textColor="@color/colorPrimaryDark"
+                android:layout_margin="@dimen/activity_horizontal_margin" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/listCourseReviews"
+                android:layout_below="@id/textCourseDetails"
+                android:orientation="vertical"
+                android:visibility="invisible"
+                android:layout_margin="@dimen/activity_vertical_margin"/>
+
+
         </RelativeLayout>
 
-    </androidx.cardview.widget.CardView>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="@dimen/text_margin"
-        android:textStyle="bold"
-        android:typeface="sans"
-        android:text="COURSE NAME"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:layout_below="@id/courseCoverCard"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:id="@+id/textCourseName" />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:maxHeight="48dp"
-        android:inputType="textMultiLine"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="@dimen/text_margin"
-        android:typeface="sans"
-        android:text="COURSE DISCRIPTION"
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:layout_below="@id/textCourseName"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:id="@+id/textCourseDescription" />
-
-    <RatingBar
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/courseRatings"
-        android:layout_below="@id/textCourseDescription"
-        android:rating="4"
-        android:numStars="5"
-        android:stepSize="1"
-        android:background="@color/colorYellow"
-        android:layout_margin="@dimen/text_margin"
-        android:isIndicator="true"
-        android:theme="@style/Widget.AppCompat.RatingBar.Indicator" />
-
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:inputType="textMultiLine"
-        android:textColor="@color/colorPrimaryDark"
-        android:textSize="@dimen/text_margin"
-        android:typeface="sans"
-        android:text="-by AUTHOR SOMEONE\n60 hours\nOffline and Online\nRs. 1000/-\n\n45 Students currently enrolled."
-        android:layout_marginTop="@dimen/activity_vertical_margin"
-        android:layout_below="@id/courseRatings"
-        android:layout_marginStart="@dimen/activity_horizontal_margin"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"
-        android:id="@+id/textCourseDetails" />
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/listIntroductoryMaterial"
-        android:layout_below="@id/textCourseDetails"
-        android:orientation="horizontal"
-        android:visibility="invisible" />
+    </ScrollView>
 
     <Button
         android:layout_width="match_parent"
@@ -121,9 +158,7 @@
         android:typeface="sans"
         android:textStyle="bold"
         android:textSize="@dimen/text_margin"
-        android:drawableLeft="@drawable/add_icon" />
-
-
+        android:drawableStart="@drawable/add_icon" />
 
 
 
