--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity"
     android:id="@+id/drawer_layout"
+    tools:openDrawer="left"
     android:background="@color/colorAccent">
 
     <ScrollView
@@ -59,6 +60,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
+                    android:foregroundGravity="left"
                     android:layout_marginRight="5dp"
                     android:orientation="horizontal"
                     android:scrollbars="horizontal"
@@ -99,15 +101,14 @@
     </ScrollView>
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorAccent"
         android:fitsSystemWindows="true"
-        android:gravity="start"
+        android:layout_gravity="start"
         app:headerLayout="@layout/header_layout"
         app:itemIconTint="@color/colorPrimaryDark"
         app:itemTextColor="@color/colorPrimaryDark"
-        app:menu="@menu/home_drawer_menu"
-        android:visibility="invisible"/>
+        app:menu="@menu/home_drawer_menu"/>
 
 </androidx.drawerlayout.widget.DrawerLayout>
