--- a/app/src/main/res/layout/signup.xml
+++ b/app/src/main/res/layout/signup.xml
@@ -150,13 +150,27 @@
             android:src="@drawable/google"
             android:layout_margin="12dp"
             android:contentDescription="@string/google_icon"/>
-        <ImageView
-            android:id="@+id/facebookSignUp"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:src="@drawable/facebook"
-            android:layout_margin="12dp"
-            android:contentDescription="@string/facebook_icon"/>
+        <FrameLayout
+            android:id="@+id/fbSignUpFrame"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <com.facebook.login.widget.LoginButton
+                android:id="@+id/signup_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone" />
+
+            <ImageView
+                android:id="@+id/facebookSignUp"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/facebook"
+                android:layout_margin="12dp"
+                android:contentDescription="@string/facebook_icon"/>
+
+        </FrameLayout>
+
         <ImageView
             android:id="@+id/twitterSignUp"
             android:layout_width="30dp"
